--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -3,7 +3,7 @@
     <div class="container">
 
       <p class="h1 logo">
-        <a href="#">Nu <span> ontstressen</span></a>
+        <a href="#">N<span>ew</span></a>
       </p>
 
       <p class="copyright">
