--- a/src/blogs/catagories/6.njk
+++ b/src/blogs/catagories/6.njk
@@ -13,23 +13,20 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/stress" class="nav-link">Stress</a>
+					      <a href="/blogs/catagories/stress" class="nav-link">Stress</a>
 			        </li>
               <li class="nav-item">
-                <a href="/slapen" class="nav-link">Slapen</a>
+                <a href="/blogs/catagories/slapen" class="nav-link">Slapen</a>
               </li>
               <li class="nav-item">
-                <a href="/ptss" class="nav-link">PTSS</a>
+                <a href="/blogs/catagories/ptss" class="nav-link">PTSS</a>
               </li>
               <li class="nav-item">
-                <a href="/tips" class="nav-link">Tips</a>
+                <a href="/blogs/catagories/tips" class="nav-link">Tips</a>
               </li>
-              {# <li class="nav-item">
-                <a href="#" class="nav-link">Web Performance</a>
-              </li> #}
-              {# <li class="nav-item">
-                <a href="#" class="nav-link">Web Performance</a>
-              </li> #}
+              <li class="nav-item">
+                <a href="/blogs/catagories/cursussen&producten/" class="nav-link">Cursussen en producten</a>
+              </li>
             </ul>
 </div>
 </div>
