--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -14,22 +14,22 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/1" class="nav-link">1</a>
+					      <a href="/blogs/catagories/stress" class="nav-link">Stress</a>
 			        </li>
               <li class="nav-item">
-                <a href="/2" class="nav-link">2</a>
+                <a href="/blogs/catagories/zorgen" class="nav-link">Zorgen</a>
               </li>
               <li class="nav-item">
-                <a href="/3" class="nav-link">3</a>
+                <a href="/blogs/catagories/slapen" class="nav-link">Slapen</a>
               </li>
               <li class="nav-item">
-                <a href="/4" class="nav-link">4</a>
+                <a href="/blogs/catagories/ptss" class="nav-link">PTSS</a>
               </li>
               <li class="nav-item">
-                <a href="/5" class="nav-link">5</a>
+                <a href="/blogs/catagories/tips" class="nav-link">Tips</a>
               </li>
               <li class="nav-item">
-                <a href="/6/" class="nav-link">6</a>
+                <a href="/blogs/catagories/cursussen&producten/" class="nav-link">Cursussen en producten</a>
               </li>
             </ul>
 </div>
