changed a lot again

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,7 +15,7 @@
             </li>
 
             <li>
-              <a href="/blog/" class="navbar-link"><i class="fas fa-newspaper"></i> Blog</a>
+              <a href="/blogs/blogpage/" class="navbar-link"><i class="fas fa-newspaper"></i> Blog</a>
             </li>
 
           <li>
