--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -14,22 +14,22 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/stress" class="nav-link">Stress</a>
+					      <a href="/blogs/catagories/1" class="nav-link">1</a>
 			        </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/zorgen" class="nav-link">Zorgen</a>
+                <a href="/blogs/catagories/2" class="nav-link">2</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/slapen" class="nav-link">Slapen</a>
+                <a href="/blogs/catagories/3" class="nav-link">3</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/ptss" class="nav-link">PTSS</a>
+                <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/tips" class="nav-link">Tips</a>
+                <a href="/blogs/catagories/5" class="nav-link">5</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/cursussen&producten/" class="nav-link">Cursussen en producten</a>
+                <a href="/blogs/6/" class="nav-link">6</a>
               </li>
             </ul>
 </div>
@@ -39,9 +39,9 @@ layout: 'base.njk'
     Wij hebben verschillende catagoriën waar wij onze blogs in onder hebben gebracht.<br>
     Zo kan jij snel en makkelijk de keuze van jou interesse maken (Klik op jou keuze).
 </p>
-{# <ul role="list" class="articles__list flow">
+<ul role="list" class="articles__list flow">
   {%- for post in collections.post  | reverse-%}
     {% include "article-snippet.njk" %}
   {%- endfor -%}
-</ul> #}
+</ul>
 </div>
