--- a/src/blogs/catagories/1.njk
+++ b/src/blogs/catagories/1.njk
@@ -13,19 +13,19 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/stress" class="nav-link">Stress</a>
+					      <a href="/blogs/catagories/2" class="nav-link">2</a>
 			        </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/zorgen" class="nav-link">Zorgen</a>
+                <a href="/blogs/catagories/3" class="nav-link">3</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/slapen" class="nav-link">Slapen</a>
+                <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/ptss" class="nav-link">PTSS</a>
+                <a href="/blogs/catagories/5" class="nav-link">5</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/cursussen&producten/" class="nav-link">Cursussen en producten</a>
+                <a href="/blogs/catagories/6" class="nav-link">6</a>
               </li>
             </ul>
 </div>
