--- a/src/blogs/catagories/6.njk
+++ b/src/blogs/catagories/6.njk
@@ -6,26 +6,26 @@ layout: 'base.njk'
 ---
 <div class="section container catagory">
   <div class="header-seven">
-<h1 class="section-title-2">Zorgen</h1>
+<h1 class="section-title-2">6</h1>
 <div>
             <ul class="list-catagory">
               <li class="nav-item">
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/stress" class="nav-link">Stress</a>
+					      <a href="/blogs/catagories/1" class="nav-link">1</a>
 			        </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/slapen" class="nav-link">Slapen</a>
+                <a href="/blogs/catagories/2" class="nav-link">2</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/ptss" class="nav-link">PTSS</a>
+                <a href="/blogs/catagories/3" class="nav-link">3</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/tips" class="nav-link">Tips</a>
+                <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/cursussen&producten/" class="nav-link">Cursussen en producten</a>
+                <a href="/blogs/catagories/5" class="nav-link">5</a>
               </li>
             </ul>
 </div>
