--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -35,9 +35,10 @@ layout: 'base.njk'
 </div>
 
 </div>
- <p>
+ <p class="blog_tekst">
     Wij hebben verschillende catagoriën waar wij onze blogs in onder hebben gebracht.<br>
-    Zo kan jij snel en makkelijk de keuze van jou interesse maken (Klik op jou keuze).
+    Zo kan jij snel en makkelijk de keuze van jou interesse maken (Klik op jou keuze).<br>
+    Of bekijk alle blogs!
 </p>
 <ul role="list" class="articles__list flow">
   {%- for post in collections.post  | reverse-%}
