--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -27,7 +27,7 @@
       </div>
   </header>
   <div>
-        <img src="/assets/bergen.jpg" alt="image left top" class="header__image" />
+        <img src="/assets/header.jpg" alt="image header" class="header__image" />
       </div>
   <script>
 
