--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Homepage Nu ontstressen
+title: Homepage New
 metatitle: "Homepage van Nu ontstressen"
 metadescription: Ontstressen kun je leren met tips & tricks of is een online cursus iets voor jou?, heeft u stress lees dan verder!
 layout: 'base.njk'
@@ -42,7 +42,7 @@ layout: 'base.njk'
       </div>
       <div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores, eius sed tempora, ratione id odit ut, voluptatibus unde dicta explicabo nam veniam quibusdam repellendus impedit pariatur sunt nostrum inventore fugiat tempore quidem. Ad est omnis officia non dolorem veniam sapiente nihil natus hic dolores! Quae vitae, voluptatum illum cum corporis commodi praesentium earum voluptatibus ullam odio quod ratione voluptates, pariatur labore provident facilis asperiores alias non, eos porro rerum.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores, eius sed tempora, ratione id odit ut, voluptatibus unde dicta explicabo nam veniam quibusdam repellendus.
 
 
         </p><br>
