--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,10 @@
   --fw-700: 700;
   --fw-900: 900;
 
-  --clr-primary-200: #dff6ff;
-  --clr-primary-300: #5d8bf4;
-  --clr-primary-400: #2d31fa;
-  --clr-primary-500: #051367;
+  --clr-primary-200: #FFEF82;
+  --clr-primary-300: #EFD345;
+  --clr-primary-400: #BABD42;
+  --clr-primary-500: #82954B;
 
   --clr-neutral-100: hsla(0, 0%, 100%, 1);
   --clr-neutral-300: hsla(0, 0%, 50%, 1);
@@ -334,10 +334,10 @@ section,
   transition-delay: 0s;
 }
 .navbar-list .btn--primary {
-  background-color: rgb(105, 221, 105);
+  background-color: rgb(44, 221, 44);
   padding: 20px 20px;
   color: var(--clr-neutral-400);
-  border: 5px solid var(--clr-neutral-400);
+  border: 5px solid var(--clr-primary-500);
   transform: translate(0, 0);
 }
 .navbar-list .btn--primary:hover {
@@ -384,7 +384,7 @@ section,
   width: 100%;
 }
 .header__image {
-  opacity: 0.3;
+  opacity: 0.5;
   width: 100%;
   height: 8rem;
   margin-bottom: 2rem;
@@ -398,7 +398,7 @@ section,
     padding-block: 30px;
   }
   .header__image {
-    height: 15rem;
+    height: 14.6rem;
   }
   
   .header.active {
@@ -612,7 +612,7 @@ section,
 }
 .list-catagory li {
   display: flex;
-  background: rgba(45, 49, 250, 1);
+  background: var(--clr-primary-400);
   padding: 10px 20px;
   margin: 5px 0;
   width: 12rem;
@@ -620,7 +620,7 @@ section,
 }
 .list-catagory li:hover {
   transform: scale(1.06);
-  background: rgba(45, 49, 250, 0.7);
+  background: var(--clr-primary-500);
 }
 
 .list-catagory li:nth-child(1) {
