changed some stuff

--- a/src/_includes/base-article.njk
+++ b/src/_includes/base-article.njk
@@ -14,7 +14,7 @@
 <div class="linken">
 <div class="image-div">
     <div>
-    <img src="/assets/stress-relax.png" alt="image left top" class="" />
+    <img src="/assets/bier.png" alt="image left top" class="" />
     </div>
     <div>
     <h3 class="section-title-h3"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
