--- a/src/index.njk
+++ b/src/index.njk
@@ -59,7 +59,7 @@ layout: 'base.njk'
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, fugit quae ipsam quo placeat error aliquid, exercitationem reiciendis hic adipisci eos iste modi. Nostrum dolore voluptatum dolores placeat sed consectetur quae sapiente minima voluptas! Ut reiciendis fugit recusandae nemo? Deserunt incidunt mollitia porro veniam, voluptatem, rem nobis exercitationem neque praesentium dignissimos in placeat officia suscipit est dolore facere ipsum impedit omnis maiores, veritatis dolorum recusandae iure excepturi! Fugit, veritatis deleniti!
         </p>
         <div class="giphy">
-          <iframe src="https://giphy.com/embed/wyD2b2fkLDxnJmmL1j" width="280" height="280" frameBorder="0" class="giphy-embed" allowFullScreen target="_blank"></iframe><p><a href="https://giphy.com/gifs/PsychosozialeDiensteWien-darberredenwir-darber-reden-wyD2b2fkLDxnJmmL1j"></a></p>
+          <iframe src="https://giphy.com/embed/dg3i5NvtNCr8A" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/beer-bubbling-dg3i5NvtNCr8A"></a></p>
           </div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facere incidunt, nulla, eius quis dolor natus odit qui tenetur assumenda delectus sequi. Dolores pariatur harum sit molestias culpa aliquam. Eum delectus, voluptatibus incidunt quidem similique iure sunt ipsum ipsa, tenetur deleniti quos quo totam nulla veniam exercitationem unde assumenda laudantium!</p><br>
         <h2 class="section-title-h2"> Lorem, ipsum dolor</h2>
@@ -110,6 +110,7 @@ layout: 'base.njk'
       </ul>
     </div>
   </section>
+  
   
 
 
