--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,10 @@
   --fw-700: 700;
   --fw-900: 900;
 
-  --clr-primary-200: #F8D800;
-  --clr-primary-300: #B4ECE3;
-  --clr-primary-400: #8479E1;
-  --clr-primary-500: #733C3C;
+  --clr-primary-200: #FFEF82;
+  --clr-primary-300: #EFD345;
+  --clr-primary-400: #BABD42;
+  --clr-primary-500: #82954B;
 
   --clr-neutral-100: hsla(0, 0%, 100%, 1);
   --clr-neutral-300: hsla(0, 0%, 50%, 1);
