making a bier website

--- a/src/_includes/base-article.njk
+++ b/src/_includes/base-article.njk
@@ -1,24 +1,19 @@
- <br><h1 class="section-title-h1"> Lorem, ipsum dolor.
-
-</h1>
+ <br><h1 class="section-title-h1"> Cursus bier brouwen</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo fuga necessitatibus doloremque, non reiciendis delectus dignissimos iusto nulla voluptates a?
-
+            Wanneer je echt serieus overweegt om zelf thuis bier te gaan brouwen dan is dit dé beginners cursus om te beginnen!
         </p>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia at enim ducimus nam dolor totam aspernatur deserunt dolorem nihil labore modi, optio, hic neque fugit laudantium? Numquam ipsa, nesciunt unde earum dolor, exercitationem reprehenderit aliquam quo excepturi sapiente nihil officia.
-
-
+            Ik ben ook ooit begonnen met volgen van verschillende cursussen omdat ik niet wist waar te beginnen, zo veel aanbod en allemaal goede beginners cursussen, volgens de aanbieders. De cursus hieronder heb ik het meeste aan gehad en bracht ook meteen het juiste resultaat!<br>
+            Duidelijk stappenplan met zeer goede uitleg over de te volgen stappen en de verschillende materialen en producten, dus...
         </p>
-
 <div class="linken">
 <div class="image-div">
     <div>
     <img src="/assets/bier.png" alt="image left top" class="" />
     </div>
     <div>
-    <h3 class="section-title-h3"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-    <p>Klik op de knop hieronder om meteen naar dé () cursus te gaan.</p>
+    <h3 class="section-title-h3"> Ben je klaar om ook zelf bier te brouwen?</h3>
+    <p>Klik op de knop hieronder om meteen naar dé bier brouw cursus te gaan.</p>
     <a href="https://www.paypro.nl/producten/Ont-stressen_kun_je_leren_-_online_cursus_/88513/99130" class="btn btn--primary"
             >GA DIRECT NAAR DE CURSUS!</a>
     </div>
