--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -1,5 +1,5 @@
 ---
-title: Blogpage Nu ontstressen
+title: Blogpage thuis bier brouwen
 metatitle: "Blog's van Nu ontstressen"
 metadescription: Blog met informatie en tips! Ontstressen kun je leren met tips & tricks of is een online cursus iets voor jou?, heeft u stress lees dan verder!
 layout: 'base.njk'
@@ -14,23 +14,23 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/1" class="nav-link">1</a>
+					      <a href="/blogs/catagories/1" class="nav-link">Bierbrouwpakketten</a>
 			        </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/2" class="nav-link">2</a>
+                <a href="/blogs/catagories/2" class="nav-link">Bierbrouwproducten</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/3" class="nav-link">3</a>
+                <a href="/blogs/catagories/3" class="nav-link">Bier soorten</a>
               </li>
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
                 <a href="/blogs/catagories/5" class="nav-link">5</a>
               </li>
               <li class="nav-item">
-                <a href="/blogs/6/" class="nav-link">6</a>
-              </li>
+                <a href="/blogs/catagories/6/" class="nav-link">6</a>
+              </li> #}
             </ul>
 </div>
 
