--- a/src/blogs/catagories/1.njk
+++ b/src/blogs/catagories/1.njk
@@ -1,24 +1,24 @@
 ---
-title: Cursussen en producten
+title: Bierbrouwpakketten 
 metatitle: "Cursussen en producten voor je gezondheid"
 metadescription: Cursussen en produkten om je leven en lijf aangenamer te maken, lees verder!
 layout: 'base.njk'
 ---
 <div class="section container catagory">
   <div class="header-four">
-<h1 class="section-title-2">1</h1>
+<h1 class="section-title-2">Bierbrouwpakketten</h1>
 <div>
             <ul class="list-catagory">
               <li class="nav-item">
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/2" class="nav-link">2</a>
+					      <a href="/blogs/catagories/2" class="nav-link">Bierbrouwproducten</a>
 			        </li>
               <li class="nav-item">
-                <a href="/blogs/catagories/3" class="nav-link">3</a>
+                <a href="/blogs/catagories/3" class="nav-link">Bier soorten</a>
               </li>
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
@@ -26,7 +26,7 @@ layout: 'base.njk'
               </li>
               <li class="nav-item">
                 <a href="/blogs/catagories/6" class="nav-link">6</a>
-              </li>
+              </li> #}
             </ul>
 </div>
 </div>
