--- a/src/blogs/catagories/2.njk
+++ b/src/blogs/catagories/2.njk
@@ -6,19 +6,19 @@ layout: 'base.njk'
 ---
 <div class="section container catagory">
   <div class="header-four">
-<h1 class="section-title-2">2</h1>
+<h1 class="section-title-2">Bierbrouwproducten</h1>
 <div>
             <ul class="list-catagory">
               <li class="nav-item">
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/1" class="nav-link">1</a>
+					      <a href="/blogs/catagories/1" class="nav-link">Bierbrouwpakketten</a>
 			        </li>
               <li class="nav-item">
                 <a href="/blogs/catagories/3" class="nav-link">3</a>
               </li>
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
               <li class="nav-item">
@@ -26,7 +26,7 @@ layout: 'base.njk'
               </li>
              <li class="nav-item">
                 <a href="/blogs/catagories/6/" class="nav-link">6</a>
-              </li>
+              </li> #}
             </ul>
 </div>
 </div>
