--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Homepage New
+title: Homepage thuis bier brouwen
 metatitle: "Homepage van Nu ontstressen"
 metadescription: Ontstressen kun je leren met tips & tricks of is een online cursus iets voor jou?, heeft u stress lees dan verder!
 layout: 'base.njk'
@@ -11,9 +11,9 @@ layout: 'base.njk'
         <div class="section-title-img">
           <div class="image-div-1">
       <aside class="aside-text">
-        <h3 class="section-title-h3">Een website over ()</h3><br>
+        <h3 class="section-title-h3">Een website over thuis zelf bier brouwen</h3><br>
         <p>
-          Op deze website vind je allerlei informatie, tips, cursussen en Producten hoe je () en Lorem ipsum dolor sit, amet consectetur adipisicing..
+          Op deze website vind je allerlei informatie, tips, cursussen en Producten hoe je thuis zelf bier kunt brouwen voor thuis bier brouwers.
         </p>
         <p>
           Lees verder of <a href="./blog">ga direct naar de blogs</a> voor meer informatie en tips.
@@ -22,19 +22,18 @@ layout: 'base.njk'
         <aside class="aside-list">
           <h3 class="section-title-h3">Wat kun je verwachten</h3>
         <ul>
-          <li>Actuele informatie over ()!</li>
-          <li>Tips om ()</li>
+          <li>Actuele informatie over bier brouwen!</li>
           <li>De beste en goedkoopste Producten!</li>
           <li>De beste cursussen!</li>
-          <li>Beter () d.m.v. tips & tricks!</li>
+          <li>Beter bier brouwen d.m.v. tips & tricks!</li>
           <li>Elke week nieuwe blog's</li>
         </ul>
-        <a href="./blog" class="btn btn--primary"
+        <a href="/blogs/blogpage/" class="btn btn--primary"
             >Direct naar de blogs</a
           >
       </aside>
       </div>
-      <h1 class="section-title">Lorem, ipsum dolor</h1><br>
+      <h1 class="section-title">Leren bier brouwen</h1><br>
       </div>
       <div class="image-div">
       <div>
@@ -42,44 +41,19 @@ layout: 'base.njk'
       </div>
       <div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maiores, eius sed tempora, ratione id odit ut, voluptatibus unde dicta explicabo nam veniam quibusdam repellendus.
-
-
+            Het ambacht van het brouwen van bier verplaatst zich steeds vaker naar de keuken. 
+            Het is een leuke hobby, maar wat moet je nu allemaal weten over het zelf thuis brouwen van bier?
         </p><br>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non fugit sit vel consequatur repellat, laboriosam eaque sed veniam nisi quis?
-
-
+            Maar als je net begint met brouwen heb je nog geen idee wat er bedoelt wordt met "Enten, bostel, maischen en bijvoorbeeld schroten".
+        </p><br>
+        <p>
+            Met deze website probeer ik je wegwijs te maken in de wereld van zelf bier brouwen. Er zijn artikelen en blogs waarin ik uitleg geef over Bierbrouwpakketten, Bierbrouwproducten en worden er een aantal cursussen beschreven die ik zelf heb gevolgd.  
         </p>
         </div>
       </div>
         <br>
-        <h2 class="section-title-h2">Lorem, ipsum dolor</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, fugit quae ipsam quo placeat error aliquid, exercitationem reiciendis hic adipisci eos iste modi. Nostrum dolore voluptatum dolores placeat sed consectetur quae sapiente minima voluptas! Ut reiciendis fugit recusandae nemo? Deserunt incidunt mollitia porro veniam, voluptatem, rem nobis exercitationem neque praesentium dignissimos in placeat officia suscipit est dolore facere ipsum impedit omnis maiores, veritatis dolorum recusandae iure excepturi! Fugit, veritatis deleniti!
-        </p>
-        <div class="giphy">
-          <iframe src="https://giphy.com/embed/dg3i5NvtNCr8A" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/beer-bubbling-dg3i5NvtNCr8A"></a></p>
-          </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facere incidunt, nulla, eius quis dolor natus odit qui tenetur assumenda delectus sequi. Dolores pariatur harum sit molestias culpa aliquam. Eum delectus, voluptatibus incidunt quidem similique iure sunt ipsum ipsa, tenetur deleniti quos quo totam nulla veniam exercitationem unde assumenda laudantium!</p><br>
-        <h2 class="section-title-h2"> Lorem, ipsum dolor</h2>
-        <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing:
-        </p>
-        <ul>
-          <li>Lorem, ipsum</li>
-          <li>Lorem, ipsum</li>
-          <li>Lorem, ipsum</li>
-          <li>Lorem, ipsum</li>
-          <li>Lorem, ipsum</li>
-        </ul>
-        
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente ratione dignissimos facilis qui hic deserunt tempora adipisci, quam corporis dolor corrupti consequatur rerum error.
-        </p>
-        <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente ratione dignissimos facilis qui hic deserunt tempora adipisci, quam corporis dolor corrupti consequatur rerum error.
-        </p>
+     
         {% include 'base-article.njk' %}
         <p>
           Of lees meer over () in de volgende artikelen, ga naar de blogs of ga direct naar de cursussen en producten.
@@ -93,7 +67,7 @@ layout: 'base.njk'
           >
         </div>
         <div>
-    <img src="/assets/books.jpg" alt="image left top" class="hero__image-bottom" />
+    <img src="/assets/beers.jpg" alt="image left top" class="hero__image-bottom" />
     </div>
       </div>
       
