--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,7 +1,7 @@
 <header class="header" data-header>
     <div class="container">
       <h1 class="logo">
-        <a href="#">N<span>ew</span></a>
+        <a href="#">Zelf bier <span> brouwen</span></a>
       </h1>
       <div class="nav-toggle-btn" aria-label="Toggle Menu" title="Toggle Menu" data-nav-toggle-btn>
         <i class="fa fa-bars"></i>
@@ -19,7 +19,7 @@
             </li>
 
           <li>
-              <a href="https://www.paypro.nl/producten/Ont-stressen_kun_je_leren_-_online_cursus_/88513/99130" class="btn btn--primary">Call to action btn</a>
+              <a href="https://www.paypro.nl/producten/Ont-stressen_kun_je_leren_-_online_cursus_/88513/99130" class="btn btn--primary">Cursus bier brouwen</a>
             </li>
 
         </ul>
