--- a/src/index.njk
+++ b/src/index.njk
@@ -56,7 +56,7 @@ layout: 'base.njk'
      
         {% include 'base-article.njk' %}
         <p>
-          Of lees meer over zelf bier brouwen in de volgende artikelen, ga naar de blogs of ga direct naar de cursussen en producten.
+          Of lees meer over zelf bier brouwen in de volgende aanbevolen artikelen, of ga direct naar de blogs voor alle informatie.
         </p><br>
         <div class="flex-group">
           <a href="#featured-articles" class="btn btn--neutral"
