--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,13 +17,13 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
     rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1VLWJ888FZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LYE0ET739"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1VLWJ888FZ');
+  gtag('config', 'G-7LYE0ET739');
 </script>
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="https://kit.fontawesome.com/77b3a768f6.js" crossorigin="anonymous"></script>
