changed link & img base-article

--- a/src/blogs/catagories/bierbrouwpakket.njk
+++ b/src/blogs/catagories/bierbrouwpakket.njk
@@ -31,7 +31,7 @@ layout: 'base.njk'
 </div>
 </div>
 <ul role="list" class="articles__list flow">
-  {%- for post in collections.tools  | reverse-%}
+  {%- for post in collections.bierbrouwpakket  | reverse-%}
     {% include "article-snippet.njk" %}
   {%- endfor -%}
 </ul>
