--- a/src/_includes/base-article.njk
+++ b/src/_includes/base-article.njk
@@ -9,12 +9,12 @@
 <div class="linken">
 <div class="image-div">
     <div>
-    <img src="/assets/bier.png" alt="image left top" class="" />
+    <img src="/assets/base-banner.jpg" alt="image left top" class="" />
     </div>
     <div>
     <h3 class="section-title-h3"> Ben je klaar om ook zelf bier te brouwen?</h3>
     <p>Klik op de knop hieronder om meteen naar dé bier brouw cursus te gaan.</p>
-    <a href="https://partner.bol.com/click/click?p=2&t=url&s=1237537&f=TXL&url=https%3A%2F%2Fwww.bol.com%2Fnl%2Fnl%2Fp%2Fthuisstudie-bierbrouwen-cursus-bier-brouwen-zelf-lekker-bier-brouwen-cadeautip-man-brouwpunt-het-startpunt-voor-bierbrouwers%2F9300000005598362%2F&name=Thuisstudie%20bierbrouwen" class="btn btn--primary">GA DIRECT NAAR DE CURSUS!</a>
+    <a href="https://partner.bol.com/click/click?p=2&t=url&s=1237691&f=TXL&url=https%3A%2F%2Fwww.bol.com%2Fnl%2Fnl%2Fp%2Fthuisstudie-bierbrouwen-cursus-bier-brouwen-zelf-lekker-bier-brouwen-cadeautip-man-brouwpunt-het-startpunt-voor-bierbrouwers%2F9300000005598362%2F&name=Thuisstudie%20bierbrouwen" class="btn btn--primary">GA DIRECT NAAR DE CURSUS!</a>
     </div>
 </div>
 </div>
