--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -14,7 +14,7 @@ layout: 'base.njk'
                 Catagoriën
               </li>
               <li class="nav-item">
-					      <a href="/blogs/catagories/1" class="nav-link">Bierbrouwpakketten</a>
+					      <a href="/blogs/catagories/bierbrouwpakket" class="nav-link">Bierbrouwpakketten</a>
 			        </li>
               <li class="nav-item">
                 <a href="/blogs/catagories/2" class="nav-link">Bierbrouwproducten</a>
