--- a/src/blogs/catagories/bierbrouwpakket.njk
+++ b/src/blogs/catagories/bierbrouwpakket.njk
@@ -1,12 +1,12 @@
 ---
 title: Bierbrouwpakketten 
-metatitle: "Cursussen en producten voor je gezondheid"
-metadescription: Cursussen en produkten om je leven en lijf aangenamer te maken, lees verder!
+metatitle: "Cursussen en producten voor thuis bier brouwen"
+metadescription: Cursussen en produkten om met vrienden of alleen thuis bier te brouwen, lees verder!
 layout: 'base.njk'
 ---
 <div class="section container catagory">
   <div class="header-four">
-<h1 class="section-title-2">Bierbrouwpakketten</h1>
+<h1 class="section-title-2">Bierbrouwpakketten Blogs</h1>
 <div>
             <ul class="list-catagory">
               <li class="nav-item">
