--- a/src/blogs/blogpage.njk
+++ b/src/blogs/blogpage.njk
@@ -16,12 +16,12 @@ layout: 'base.njk'
               <li class="nav-item">
 					      <a href="/blogs/catagories/bierbrouwpakket" class="nav-link">Bierbrouwpakketten</a>
 			        </li>
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="/blogs/catagories/2" class="nav-link">Bierbrouwproducten</a>
               </li>
               <li class="nav-item">
                 <a href="/blogs/catagories/3" class="nav-link">Bier soorten</a>
-              </li>
+              </li> #}
               {# <li class="nav-item">
                 <a href="/blogs/catagories/4" class="nav-link">4</a>
               </li>
